start working on deployment

--- a/convertedMicroServices/CMakeLists.txt
+++ b/convertedMicroServices/CMakeLists.txt
@@ -4,29 +4,35 @@ project(convertedMicroServices)
 # Pour aller chercher les packages seulement dans l'env du shell nix (voire https://cmake.org/cmake/help/latest/variable/CMAKE_FIND_ROOT_PATH_MODE_PACKAGE.html)
 set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE NONE)
 
-find_package(nlohmann_json REQUIRED)
+include(FetchContent)
+FetchContent_Declare(
+  nlohmann_json
+  GIT_REPOSITORY https://github.com/nlohmann/json.git
+  GIT_TAG v3.11.3
+)
+FetchContent_MakeAvailable(nlohmann_json)
 
 add_executable(
     convertedMicroServices
-    Types/Creator/Creator.cpp
-    Types/Media/Media.cpp
-    Types/UserMention/UserMention.cpp
-    Types/Url/Url.cpp
-    Types/Post/Post.cpp
-    Types/Post/PostType.cpp
-    Types/User/User.cpp
-    Types/TextServiceReturn/TextServiceReturn.cpp
-    UniqueIdHandler/UniqueIdHandler.cpp
-    MediaHandler/MediaHandler.cpp
-    SocialGraphHandler/SocialGraphHandler.cpp
-    UserHandler/UserHandler.cpp
-    PostStorageHandler/PostStorageHandler.cpp
-    UserMentionHandler/UserMentionHandler.cpp
-    ComposePostHandler/ComposePostHandler.cpp
-    TextHandler/TextHandler.cpp
-    UserTimelineHandler/UserTimelineHandler.cpp
-    HomeTimelineHandler/HomeTimelineHandler.cpp
-    SessionStorageUserService/SessionStorageUserService.cpp
+    src/Types/Creator/Creator.cpp
+    src/Types/Media/Media.cpp
+    src/Types/UserMention/UserMention.cpp
+    src/Types/Url/Url.cpp
+    src/Types/Post/Post.cpp
+    src/Types/Post/PostType.cpp
+    src/Types/User/User.cpp
+    src/Types/TextServiceReturn/TextServiceReturn.cpp
+    src/UniqueIdHandler/UniqueIdHandler.cpp
+    src/MediaHandler/MediaHandler.cpp
+    src/SocialGraphHandler/SocialGraphHandler.cpp
+    src/UserHandler/UserHandler.cpp
+    src/PostStorageHandler/PostStorageHandler.cpp
+    src/UserMentionHandler/UserMentionHandler.cpp
+    src/ComposePostHandler/ComposePostHandler.cpp
+    src/TextHandler/TextHandler.cpp
+    src/UserTimelineHandler/UserTimelineHandler.cpp
+    src/HomeTimelineHandler/HomeTimelineHandler.cpp
+    src/SessionStorageUserService/SessionStorageUserService.cpp
 )
 
 set_target_properties(convertedMicroServices PROPERTIES
