add traefik-certs volume to docker-compose

--- a/ansible/roles/install-docker/tasks/main.yaml
+++ b/ansible/roles/install-docker/tasks/main.yaml
@@ -1,6 +1,6 @@
 # source: https://colinfo.fr/installation-dansible-et-deploiement-de-docker-compose/
 
-- name: Install required packages
+- name: Installation des paquets requis
   ansible.builtin.apt:
     name:
       - apt-transport-https
@@ -9,23 +9,26 @@
       - gnupg
       - lsb-release
     state: present
-    update_cache: yes
+    update_cache: true
 
-- name: Add Docker GPG key
-  ansible.builtin.apt_key:
+- name: Ajout de la clé GPG docker
+  # voir: https://stackoverflow.com/questions/71585303/how-can-i-manage-keyring-files-in-trusted-gpg-d-with-ansible-playbook-since-apt
+  ansible.builtin.get_url:
     url: https://download.docker.com/linux/debian/gpg
-    state: present
+    dest: /etc/apt/keyrings/docker.asc
+    mode: "0644"
+    force: true
 
-- name: Add Docker repository
+- name: Ajout du repertoire docker
   ansible.builtin.apt_repository:
-    repo: "deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable"
+    repo: "deb [signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable"
     state: present
 
-- name: Update apt cache
+- name: Mise à jour du cache apt
   ansible.builtin.apt:
-    update_cache: yes
+    update_cache: true
 
-- name: Install Docker and Docker Compose plugin
+- name: Installation de docker et docker compose
   ansible.builtin.apt:
     name:
       - docker-ce
