add traefik-certs volume to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,3 +48,6 @@ services:
       - "traefik.http.routers.client.tls.certresolver=letencrypt"
       - "traefik.http.routers.client.tls=true"
       - "traefik.http.services.client.loadbalancer.server.port=3000"
+
+volumes:
+  traefik-certs:
