update traefik conf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,18 +19,6 @@ services:
       - "traefik.http.routers.traefik-dashboard.tls=true"
       - "traefik.http.routers.traefik-dashboard.tls.certresolver=letencrypt"
 
-  ws-server:
-    build:
-      context: ws-server
-      dockerfile: Dockerfile
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.ws-server.rule=Host(`in-browser-microservice.nathan-fouere.com`) && PathPrefix(`/ws-server`)"
-      - "traefik.http.routers.ws-server.entrypoints=websecure"
-      - "traefik.http.services.ws-server.loadbalancer.server.port=4444"
-      - "traefik.http.routers.ws-server.tls.certresolver=letencrypt"
-      - "traefik.http.routers.ws-server.tls=true"
-
   client:
     build:
       context: .
@@ -43,6 +31,6 @@ services:
       - "traefik.http.routers.client.tls.certresolver=letencrypt"
       - "traefik.http.routers.client.tls=true"
       - "traefik.http.services.client.loadbalancer.server.port=3000"
-
+      - "traefik.http.routers.client.service=client"
 volumes:
   traefik-certs:
