--- a/ansible/roles/deploy-app/tasks/main.yaml
+++ b/ansible/roles/deploy-app/tasks/main.yaml
@@ -2,7 +2,7 @@
   ansible.builtin.git:
     repo: "https://github.com/NathanFouere/in-browser-microservice"
     dest: "/root/in-browser-microservice"
-    version: main
+    version: benchmark-final
     force: yes
 
 - name: Générer .env
